# Projet-News-Agents

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE_DECISIONS.md  Brief_PowerPoint.md  CRITIQUE_AND_ROADMAP.md  Explication_Projet_Presentation.md  Explication_Technique_Code.md  MODEL_ARTIFACTS.md  PROJECT_OVERVIEW.md  README.md  adam.py  adam_benchmark.py  agent_agregateur.py  agent_analyste.py  agent_filtrage.py  agent_sentiment.py  antoine.py  antoine_benchmark.py  apply_mono.py  apply_mono_v2.py  apply_mono_v3.py  articles.csv  articles_filtres.txt  benchmark_public_models.py  benchmark_v1_notes.md  check_model.py  check_stats.py  compare.py  compare_human_model.py  dashboard.py  download_fnspid.py  export_articles.py  fundamental_strength_agent.py  generate_report.py  generate_training_data.py  human_review.py  install.py  investment_processing_pipeline.py  litigious_agent.py  (+23 more)
.github/workflows/: ci.yml  test.yml
.streamlit/: config.toml
benchmark_adam_25/: dataset.json
benchmark_adam_25/resultats/: benchmark_samuel.csv
benchmark_guillaume_130/: dataset.csv
benchmark_guillaume_130/resultats/: comparison.csv
benchmark_results/: polarity_benchmarks.json  uncertainty_benchmarks.json
benchmarks/: README.md
benchmarks/benchmark_maison/: benchmark_maison_comparison_results.csv  benchmark_v1_articles.csv  compare_benchmark_maison.py  run_benchmark_maison.py
benchmarks/sentfin/: benchmark_utils.py  compare_sentfin_result.py  run_sentfin_v2_antoinev2.py  run_sentfin_v2_finbert_baselines.py  run_sentfin_v2_poc_filtrage_agents.py  run_sentfin_v2_samuel_polarityagent.py  sentfin_v2_comparison_results.csv
dashboard/: __init__.py  app.py
eval/: benchmark_robustness.py  benchmark_structural.py  evaluate_abnormal_returns.py  evaluate_calibration.py  evaluate_debate_dynamics.py  evaluate_error_propagation.py  evaluate_event_study.py  evaluate_execution_costs.py  evaluate_faithfulness.py  evaluate_historical_backtest.py  evaluate_latency.py  evaluate_market.py  evaluate_market_regimes.py  evaluate_multiagent_arch.py  evaluate_pipeline.py  evaluate_portfolio.py  evaluate_retriever.py  evaluate_signal_vs_market.py  evaluate_unit_llm.py  evaluate_walk_forward.py  run_eval.py
eval/eval_results/benchmark_adam25/: benchmark_locus_all.csv  benchmark_locus_all_metrics.json
eval/eval_results/fnspid/: locus_distilroberta_2400.csv  locus_distilroberta_2400_metrics.json  locus_full_20.csv  locus_full_20_metrics.json
eval/lm_tasks/: prepare_financial_phrasebank.py  setup_benchmarks.py
financial_phrasebank/resultats/: samuel_polarity.json
fiqa/resultats/: samuel_polarity.json  samuel_uncertainty.json
fnspid/: run_antoine.py
fnspid/resultats/: antoine_results.csv
fundamental_strength_model/: benchmarks.json  config.json  metrics.json  model.joblib
litigious_model/: benchmarks.json  config.json  metrics.json  model.joblib
market_impact_model/: classifier.joblib  feature_columns.json  kmeans.joblib  metrics.json
metrics_plots/: base_output_weight_summary.csv  final_model_numeric_feature_weights.csv  output_metrics_summary.csv
nicky_nicky/resultats/: samuel_uncertainty.json
resultats/: benchmark_antoine.csv  benchmark_samuel.csv
scratch/: get_models.py
scripts/: audit_hebdomadaire.py  evaluate_empirical_edge.py  fit_calibration_nightly.py  read_db_temp.py  replace_prints.py  validate_recommendations.py
sentfin_v2/: download.py
sentfin_v2/resultats/: comparison.csv
src/: config.py
src/agents/: agent_absa.py  agent_critic.py  agent_debat.py  agent_filtrage.py  agent_high_quality_consensus.py  agent_memoire.py  agent_reasoning_auditor.py  agent_verifier.py
src/dashboard/: dashboard.py
src/discovery/: __init__.py  data_harvester.py  orchestrator.py  ticker_discovery.py
src/execution/: __init__.py  alpaca_broker.py  broker_protocol.py  dry_run_broker.py  portfolio_manager.py
src/knowledge/: __init__.py  cold_start.py  earnings_calls.py  event_classifier.py  fundamentals.py  hybrid_search.py  liquidity.py  macro_context.py  mmr.py  pr_classifier.py  rag_enhanced.py  rag_store.py  reranker.py  sec_edgar.py  sentiment_divergence.py  social_sentiment.py  transcript_analyzer.py
src/pipelines/: agent_filtrage_api.py  agent_pipeline.py  news_pipeline.py  status_manager.py
src/strategy/: __init__.py  investor_profile.py  portfolio_constraints.py  portfolio_state.py  position_sizer.py  strategy_context.py
src/utils/: anonymizer.py  article_enrichment.py  bayesian_aggregator.py  calibration.py  consensus_voter.py  context_compressor.py  counterfactual.py  debate_augmentation.py  dry_run_logger.py  ese_entropy.py  execution_costs.py  htc_calibrator.py  information_density.py  lang_detect.py  llm_client.py  llm_cost_tracker.py  logger.py  minimal_sufficient_statistic.py  ner_gliner.py  novelty_scorer.py  politis_white.py  rate_limiter.py  security_sanitizer.py  simhash_dedup.py  source_tier.py  stress_generator.py  structured_output.py  temporal_fence.py  yolo_classifier.py
templates/: dashboard.html
tests/: test_anonymizer_dynamic.py  test_cold_start.py  test_data_harvester.py  test_execution.py  test_high_quality_consensus.py  test_integration.py  test_knowledge_layer.py  test_llm_client.py  test_logger.py  test_new_layers.py  test_orchestrator.py  test_phase3_modules.py  test_politis_white.py  test_portfolio_manager.py  test_rag_upgrades.py  test_reasoning_auditor.py  test_regime_filter.py  test_security.py  test_sentiment_divergence.py  test_social_sentiment.py  test_ticker_discovery.py  test_transcript_analyzer.py  test_walk_forward.py  test_yolo.py
uncertainty_model/: config.json  metrics.json  model.safetensors
